@@ -1,3 +1,8 @@
+2014-06-11
+
+	* libsylph/socket.c: sock_info_connect_by_getaddrinfo():
+	  win32: fixed crash on network failure.
+
 2014-06-10
 
 	* libsylph/mbox.c
